<resources>
    <string name="app_name">MiReceta</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="clini_clic">Clini-Clic</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registro">Registro</string>
    <string name="politicas_de_privacidad">Políticas de privacidad</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="click_to_login">Click to login</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="registrate_aqui">Registrate Aqui</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="comprar">Comprar</string>
    <string name="aceptar">Aceptar</string>
    <string name="nuevo_tratamiento">Nuevo tratamiento</string>
    <string name="crear_tratamiento">Crear Tratamiento</string>
    <string-array name="especialidades_medicas">
        <item>Medicina General</item>
        <item>Medicina Familiar</item>
        <item>Cardiología</item>
    </string-array>
    <string-array name="opciones_filtro">
        <item>Sin responder</item>
        <item>Respondidas</item>
    </string-array>
</resources>

