<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/rectangle1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/mr"
                android:layout_width="300dp"
                android:layout_height="155dp"
                android:background="@drawable/mr" />

            <TextView
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mireceta" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="Correo Electrónico"
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:text="Contraseña"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/iniciar_sesion"
                android:id="@+id/btn_login"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/buttonmireceta"/>


            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/nuevoregistro"
                android:text="@string/registrate_aqui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mireceta"/>

            <ImageView
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rectangle2" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
